# ProSense

./: .gitignore  ACTUAL_ARCHITECTURE.md  AUDIT_2025_ARCHITECTURE_OVERVIEW.md  AUDIT_2025_FEATURE_STATUS_MATRIX.json  AUDIT_2025_PROJECT_STRUCTURE_MANIFEST.md  AUDIT_2025_STABILIZATION_ROADMAP.md  AUDIT_2025_TASK_EXECUTION_LOG.md  AUDIT_2025_TECHNICAL_DEBT_REPORT.md  AUDIT_PROJECT_MANIFEST.json  FEATURE_MAP.md  FEATURE_STATUS_MATRIX.md  README.md  STABILIZATION_ROADMAP.md  TECHNICAL_DEBT_REPORT.md  config.yaml  config_loader.py  correlate_datasets.py  correlate_features.py  error_handling.py  load_data.py  load_features.py  log_parser.py  logging_config.py  main.py  prepro_data.py  project_manifest.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
modalities/: __init__.py  featex_acc.py  featex_bvp.py  featex_eeg.py  featex_gsr.py  featex_gyro.py  featex_ppg.py  featex_temp.py  prepro_acc.py  prepro_bvp.py  prepro_eeg.py  prepro_gsr.py  prepro_gyro.py  prepro_ppg.py  prepro_temp.py
tests/: __init__.py  conftest.py  test_config_loader.py  test_correlate_datasets.py  test_correlate_features.py  test_featex_acc.py  test_featex_bvp.py  test_featex_eeg.py  test_featex_gsr.py  test_featex_gyro.py  test_featex_ppg.py  test_featex_temp.py  test_load_data.py  test_load_features.py  test_prepro_acc.py  test_prepro_bvp.py  test_prepro_data.py  test_prepro_eeg.py  test_prepro_gsr.py  test_prepro_gyro.py  test_prepro_ppg.py  test_prepro_temp.py
